--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>São Luiz Express | Painel de Resultados</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚚</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -12,16 +13,16 @@
           extend: {
             colors: {
               sle: {
-                primary: '#2E31B4',     // Primary Blue
-                primaryDark: '#1A1B62', // Deep Blue Text
-                secondary: '#EC1B23',   // Primary Red
+                primary: '#2E31B4',     // Azul Primário
+                primaryDark: '#1A1B62', // Azul Profundo
+                secondary: '#EC1B23',   // Vermelho Marca
                 secondaryLight: '#F04A50',
-                dark: '#0F103A',        // Deep Background (Dark Mode)
-                darker: '#060719',      // Darker variation
-                light: '#FCFCFE',       // Text White
-                lightBg: '#F2F2F8',     // Light Mode Background
-                surface: '#FFFFFF',     // Light Mode Card Surface
-                accent: '#4B4C9F',      // Lighter Blue Accent
+                dark: '#0F103A',        // Fundo Dark
+                darker: '#060719',      // Variação mais escura
+                light: '#FCFCFE',       // Texto Claro
+                lightBg: '#F2F2F8',     // Fundo Light
+                surface: '#FFFFFF',     // Superfície Card Light
+                accent: '#4B4C9F',      // Sotaque Azul
                 glass: 'rgba(15, 16, 58, 0.75)', 
                 glassLight: 'rgba(255, 255, 255, 0.85)',
               }
@@ -54,7 +55,7 @@
         font-family: 'Inter', sans-serif;
         overflow-x: hidden;
       }
-      /* Custom Scrollbar */
+      /* Scrollbar Customizada */
       ::-webkit-scrollbar {
         width: 8px;
       }
