--- a/index.html
+++ b/index.html
@@ -13,95 +13,48 @@
           extend: {
             colors: {
               sle: {
-                primary: '#2E31B4',     // Azul Primário
-                primaryDark: '#1A1B62', // Azul Profundo
-                secondary: '#EC1B23',   // Vermelho Marca
+                primary: '#2E31B4',
+                primaryDark: '#1A1B62',
+                secondary: '#EC1B23',
                 secondaryLight: '#F04A50',
-                dark: '#0F103A',        // Fundo Dark
-                darker: '#060719',      // Variação mais escura
-                light: '#FCFCFE',       // Texto Claro
-                lightBg: '#F2F2F8',     // Fundo Light
-                surface: '#FFFFFF',     // Superfície Card Light
-                accent: '#4B4C9F',      // Sotaque Azul
-                glass: 'rgba(15, 16, 58, 0.75)', 
-                glassLight: 'rgba(255, 255, 255, 0.85)',
+                dark: '#0F103A',
+                darker: '#060719',
+                light: '#FCFCFE',
+                lightBg: '#F2F2F8',
               }
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-            },
-            animation: {
-              'float': 'float 6s ease-in-out infinite',
-              'pulse-glow': 'pulse-glow 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            },
-            keyframes: {
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-10px)' },
-              },
-              'pulse-glow': {
-                '0%, 100%': { opacity: 1 },
-                '50%': { opacity: .5 }
-              }
             }
-          },
-        },
+          }
+        }
       }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-      body {
-        margin: 0;
-        font-family: 'Inter', sans-serif;
-        overflow-x: hidden;
-      }
-      /* Scrollbar Customizada */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #2E31B4;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #EC1B23;
-      }
-      
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.05);
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      
-      .dark .glass-panel {
-        background: rgba(15, 16, 58, 0.6);
-        border: 1px solid rgba(255, 255, 255, 0.05);
-      }
-
-      .light-glass-panel {
-         background: rgba(255, 255, 255, 0.7);
-         backdrop-filter: blur(12px);
-         border: 1px solid rgba(255, 255, 255, 0.8);
-         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
-      }
+      body { margin: 0; font-family: 'Inter', sans-serif; overflow-x: hidden; background: #0F103A; }
+      ::-webkit-scrollbar { width: 6px; }
+      ::-webkit-scrollbar-track { background: transparent; }
+      ::-webkit-scrollbar-thumb { background: #2E31B4; border-radius: 10px; }
+      .glass-card { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.1); }
+      .dark .glass-card { background: rgba(15, 16, 58, 0.6); border: 1px solid rgba(255, 255, 255, 0.05); }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "react": "https://esm.sh/react@19",
+    "react-dom": "https://esm.sh/react-dom@19",
+    "react-dom/client": "https://esm.sh/react-dom@19/client",
+    "framer-motion": "https://esm.sh/framer-motion@12",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
