--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
       ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb { background: #2E31B4; border-radius: 10px; }
       .glass-card { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.1); }
-      .dark .glass-card { background: rgba(15, 16, 58, 0.6); border: 1px solid rgba(255, 255, 255, 0.05); }
+      .dark .glass-card { background: rgba(15, 16, 58, 0.4); border: 1px solid rgba(255, 255, 255, 0.05); }
+      
+      @keyframes gradient-x {
+        0%, 100% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+      }
+      .animate-gradient-x {
+        background-size: 200% 200%;
+        animation: gradient-x 5s ease infinite;
+      }
     </style>
     <script type="importmap">
 {
